Registration process refectoring Imported from Changeset 2628

--- a/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_Layout.cshtml
@@ -122,6 +122,10 @@
             $('#user_menue').removeClass('open');
         });
 
+        $('#signupPopup').on('shown.bs.modal', function (e) {
+            //do something on bootstrap model show
+        });
+
     });
 
 //Chat Script
