--- a/WarehouseEcommerce/Views/Theme/University/Orders/SagePay.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Orders/SagePay.cshtml
@@ -39,7 +39,7 @@
 <div id="main" class="about bg-white confirm-order-page">
     <form>
         <h1>Payment Details</h1>
-        <div id="sp-container"></div>
+        <div id="my-container"></div>
         <div id="submit-container">
             <input type="submit" />
         </div>
@@ -47,5 +47,21 @@
 </div>
 
 <script>
+
+    @*sagepayCheckout({
+        merchantSessionKey: '@ViewBag.AuthCode',
+        containerSelector: '#my-container',
+  onTokenise: function(tokenisationResult) {
+      if (tokenisationResult.success) {
+          debugger;
+      console.log('Tokenisation successful', tokenisationResult.cardIdentifier);
+      } else {
+          debugger;
+      console.error('Tokenisation failed', tokenisationResult.error.errorMessage);
+    }
+  }
+    });*@
+
+
     sagepayCheckout({ merchantSessionKey: '@ViewBag.AuthCode' }).form();
 </script>
